--- a/AppNine.csproj
+++ b/AppNine.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
